--- a/fall.html
+++ b/fall.html
@@ -145,13 +145,13 @@
 
   <!-- Cover page -->
   <amp-story standalone supports-landscape title="Fall Ingredients" publisher="Minnow News Network"
-    publisher-logo-src="img/fish.png" poster-portrait-src="img/fall.png">
+    publisher-logo-src="img/fish.webp" poster-portrait-src="img/fall.webp">
 
     <amp-story-auto-analytics gtag-id="G-V3TNNSX3H4"></amp-story-auto-analytics>
 
     <amp-story-page id="cover" background-audio="assets/bach.mp3">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/cover.png" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/cover.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
@@ -169,7 +169,7 @@
       <amp-story-grid-layer template="vertical">
         <h1>Pumpkin Spice</h1>
         <h1>Put it on everything.</h1>
-        <amp-img src="assets/hillary.png" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/hillary.webp" width="720" height="1280" layout="responsive">
         </amp-img>
         <q>I carry Pumpkin Spice with me everywhere I go!</q>
       </amp-story-grid-layer>
@@ -178,7 +178,7 @@
     <!-- Page 2 (Dog): 2 layers (fill + thirds) -->
     <amp-story-page id="page2" background-audio="assets/pumpkin-spice.mp3">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/oprah.png" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/oprah.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
@@ -190,7 +190,7 @@
     <!-- Page 3 (Bird): 3 layers (fill + vertical + vertical) + Audio-->
     <amp-story-page id="page3" background-audio="assets/cranberry.mp3">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/cranberries.png" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/cranberries.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
@@ -206,7 +206,7 @@
     <!-- Page 4 (Rabbit): 3 layers (fill (video) + vertical + vertical) -->
     <amp-story-page id="page4" background-audio="assets/water-droplets.mp3">
       <amp-story-grid-layer template="fill">
-        <amp-video autoplay loop width="720" height="1280" poster="assets/cranberries.png" layout="responsive">
+        <amp-video autoplay loop width="720" height="1280" poster="assets/cranberries.webp" layout="responsive">
           <source src="assets/cranberries.mp4" type="video/mp4">
         </amp-video>
       </amp-story-grid-layer>
@@ -225,16 +225,16 @@
       <amp-story-grid-layer template="fill" class="noedge">
         <div class="wrapper">
 
-          <amp-img src="assets/carrots.jpg" width="448" height="560" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/carrots.webp" width="448" height="560" layout="responsive" animate-in="fade-in"
             animate-in-delay="0.6s">
           </amp-img>
-          <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.jpg" layout="responsive">
+          <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.webp" layout="responsive">
             <source src="assets/sweetpotato.mp4" type="video/mp4">
           </amp-video>
-          <amp-img src="assets/purplepotatoes.jpg" width="302" height="403" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/purplepotatoes.webp" width="302" height="403" layout="responsive" animate-in="fade-in"
             animate-in-delay=".8s">
           </amp-img>
-          <amp-img src="assets/potato.jpg" width="301" height="413" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/potato.webp" width="301" height="413" layout="responsive" animate-in="fade-in"
             animate-in-delay="1s">
           </amp-img>
 
@@ -252,18 +252,18 @@
       <amp-story-grid-layer template="fill" class="noedge">
         <div class="wrapper">
 
-          <amp-img src="assets/ginger.jpg" width="448" height="560" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/ginger.webp" width="448" height="560" layout="responsive" animate-in="fade-in"
             animate-in-delay="0.6s">
           </amp-img>
-          <amp-img src="assets/coffee.jpg" width="6" height="4" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/coffee.webp" width="6" height="4" layout="responsive" animate-in="fade-in"
             animate-in-delay=".8s">
           </amp-img>
-          <amp-img src="assets/ginger3.jpg" width="301" height="413" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/ginger3.webp" width="301" height="413" layout="responsive" animate-in="fade-in"
             animate-in-delay="1s">
           </amp-img>
 
 
-          <amp-img src="assets/ginger2.jpg" width="302" height="403" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/ginger2.webp" width="302" height="403" layout="responsive" animate-in="fade-in"
             animate-in-delay=".8s">
           </amp-img>
 
@@ -279,26 +279,26 @@
     </amp-story-page>
 
     <amp-story-page id="page5.6" background-audio="assets/autumn-piano.mp3">
-        <amp-story-grid-layer template="fill">
-            <amp-video autoplay loop width="720" height="1280" poster="assets/coffee.jpg" layout="responsive">
-                <source src="assets/Coffee_with_Ginger_Video.mp4" type="video/mp4">
-            </video>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical">
-            <h1>Ginger Coffee</h1>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="bottom">
-            <p style="background-color:chocolate;">A warming and spicy way to start your day. The perfect fall beverage.</p>
-        </amp-story-grid-layer>
+      <amp-story-grid-layer template="fill">
+        <amp-video autoplay loop width="720" height="1280" poster="assets/coffee.webp" layout="responsive">
+          <source src="assets/Coffee_with_Ginger_Video.mp4" type="video/mp4">
+          </video>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical">
+        <h1>Ginger Coffee</h1>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <p style="background-color:chocolate;">A warming and spicy way to start your day. The perfect fall beverage.</p>
+      </amp-story-grid-layer>
     </amp-story-page>
 
     <amp-story-page id="page6" background-audio="assets/tea-in-autumn.mp3">
       <amp-story-grid-layer template="fill">
         <div class="wrapper">
-          <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.jpg" layout="responsive">
+          <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.webp" layout="responsive">
             <source src="assets/greentea.mp4" type="video/mp4">
           </amp-video>
-          <amp-img src="assets/apple.jpg" width="6" height="4" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/apple.webp" width="6" height="4" layout="responsive" animate-in="fade-in"
             animate-in-delay=".8s">
           </amp-img>
         </div>
@@ -314,22 +314,22 @@
     </amp-story-page>
 
     <amp-story-page id="page6.1" background-audio="assets/tea-in-autumn.mp3">
-        <amp-story-grid-layer template="fill">
-            <amp-video autoplay loop width="720" height="1280" poster="assets/apple.jpg" layout="responsive">
-                <source src="assets/Apple_Tea_Video_Generated.mp4" type="video/mp4">
-            </amp-video>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical">
-            <h1>Apple Tea Video</h1>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="bottom">
-            <p style="background-color:chocolate;">A new video for apple tea.</p>
-        </amp-story-grid-layer>
+      <amp-story-grid-layer template="fill">
+        <amp-video autoplay loop width="720" height="1280" poster="assets/apple.webp" layout="responsive">
+          <source src="assets/Apple_Tea_Video_Generated.mp4" type="video/mp4">
+        </amp-video>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical">
+        <h1>Apple Tea Video</h1>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <p style="background-color:chocolate;">A new video for apple tea.</p>
+      </amp-story-grid-layer>
     </amp-story-page>
 
     <amp-story-page id="page7" background-audio="assets/pouring-soda-in-glass.mp3">
       <amp-story-grid-layer template="fill">
-        <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.jpg" layout="responsive">
+        <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.webp" layout="responsive">
           <source src="assets/cranberryjuice.mp4" type="video/mp4">
         </amp-video>
       </amp-story-grid-layer>
@@ -346,7 +346,7 @@
     <amp-story-page id="page8" background-audio="assets/autumn.mp3">
       <amp-story-grid-layer template="fill">
 
-        <amp-img src="assets/cider.jpg" width="285" height="427" layout="responsive">
+        <amp-img src="assets/cider.webp" width="285" height="427" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
@@ -362,7 +362,7 @@
 
     <amp-story-page id="page9" background-audio="assets/falling.mp3">
       <amp-story-grid-layer template="fill">
-        <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.jpg" layout="responsive">
+        <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.webp" layout="responsive">
           <source src="assets/maplesyrup.mp4" type="video/mp4">
         </amp-video>
       </amp-story-grid-layer>
@@ -379,7 +379,7 @@
 
     <amp-story-page id="page10" background-audio="assets/apple-blossom.mp3">
       <amp-story-grid-layer template="fill">
-        <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.jpg" layout="responsive">
+        <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.webp" layout="responsive">
           <source src="assets/applebutter.mp4" type="video/mp4">
         </amp-video>
       </amp-story-grid-layer>
@@ -393,7 +393,7 @@
     </amp-story-page>
     <amp-story-page id="page8" background-audio="assets/piano.mp3">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/bike.jpg" width="285" height="427" layout="responsive">
+        <amp-img src="assets/bike.webp" width="285" height="427" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
@@ -407,7 +407,7 @@
 
     <amp-story-page id="page8" background-audio="assets/orchard.mp3">
       <amp-story-grid-layer template="vertical">
-        <amp-video style="position: relative;" autoplay loop width="9" height="16" poster="assets/rabbit.jpg"
+        <amp-video style="position: relative;" autoplay loop width="9" height="16" poster="assets/rabbit.webp"
           layout="responsive">
           <source src="assets/appletree.mp4" type="video/mp4">
         </amp-video>
@@ -422,7 +422,7 @@
 
     <amp-story-page id="last" background-audio="assets/falling.mp3">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/tunnel.jpg" width="285" height="427" layout="responsive">
+        <amp-img src="assets/tunnel.webp" width="285" height="427" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
