--- a/gamestop.html
+++ b/gamestop.html
@@ -139,11 +139,11 @@
 
 <body>
   <amp-story standalone supports-landscape title="GameStop's High-Stakes Wager" publisher="Minnow News Network"
-    publisher-logo-src="img/fish.png" poster-portrait-src="assets/gamestop_store.jpg">
+    publisher-logo-src="img/fish.webp" poster-portrait-src="assets/gamestop_store.webp">
     <amp-story-auto-analytics gtag-id="G-V3TNNSX3H4"></amp-story-auto-analytics>
     <amp-story-page id="cover">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/gamestop_store.jpg" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/gamestop_store.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
@@ -154,7 +154,7 @@
     <!-- Page 1 -->
     <amp-story-page id="page1">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/stock_chart.jpg" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/stock_chart.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
@@ -195,7 +195,7 @@
     <!-- Page 5 -->
     <amp-story-page id="page5">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/ryan_cohen.jpg" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/ryan_cohen.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
