--- a/banksy.html
+++ b/banksy.html
@@ -82,13 +82,12 @@
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  
+
   <script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
   <script async custom-element="amp-story" src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400" rel="stylesheet">
   <style amp-custom>
-
     amp-story {
       font-family: 'Oswald', sans-serif;
       color: #fff;
@@ -144,14 +143,14 @@
 </head>
 
 <body>
-  
+
   <!-- Cover page -->
-  <amp-story standalone supports-landscape title="New Banksy at the Royal Courts of Justice" publisher="Minnow News Network"
-    publisher-logo-src="img/fish.png" poster-portrait-src="assets/banksy.avif">
+  <amp-story standalone supports-landscape title="New Banksy at the Royal Courts of Justice"
+    publisher="Minnow News Network" publisher-logo-src="img/fish.webp" poster-portrait-src="assets/banksy.webp">
     <amp-story-auto-analytics gtag-id="G-V3TNNSX3H4"></amp-story-auto-analytics>
     <amp-story-page id="cover">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/banksy2.jpg" width="4" height="2.25" layout="responsive">
+        <amp-img src="assets/banksy2.webp" width="4" height="2.25" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
@@ -162,17 +161,19 @@
     <!-- Page 1 -->
     <amp-story-page id="page1">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/banksy2.jpg" width="4" height="2.25" layout="responsive">
+        <amp-img src="assets/banksy2.webp" width="4" height="2.25" layout="responsive">
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
-        <p style="background-color: rgba(0,0,0,0.7);">A new mural by street artist Banksy appeared on the side of the Royal Courts of Justice in London.</p>
+        <p style="background-color: rgba(0,0,0,0.7);">A new mural by street artist Banksy appeared on the side of the
+          Royal Courts of Justice in London.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
     <amp-story-page id="page2">
       <amp-story-grid-layer template="vertical">
         <h1>A Commentary on Free Speech</h1>
-        <p>The artwork depicts a judge in a wig and gown appearing to use a gavel to beat a protester who is lying on the
+        <p>The artwork depicts a judge in a wig and gown appearing to use a gavel to beat a protester who is lying on
+          the
           ground holding a blood-spattered placard.</p>
         <p>The mural is seen as a commentary on a newly passed law banning support for Palestine Action, which has drawn
           criticism from rights groups and legal experts over free speech concerns.</p>
@@ -182,11 +183,13 @@
 
     <amp-story-page id="page3">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/banksy3.jpeg" width="4" height="2.25" layout="responsive">
+        <amp-img src="assets/banksy3.webp" width="4" height="2.25" layout="responsive">
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="top">
-        <p style="background-color: rgba(0,0,0,0.7);">HM Courts and Tribunals Service said that because the 143-year-old complex is a listed building, they are
-        "obliged to maintain its original character. The image so far remains stained into the building as a reminder of the spectacle the art created.</p>
+        <p style="background-color: rgba(0,0,0,0.7);">HM Courts and Tribunals Service said that because the 143-year-old
+          complex is a listed building, they are
+          "obliged to maintain its original character. The image so far remains stained into the building as a reminder
+          of the spectacle the art created.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
