--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html amp lang="en">
+
 <head>
   <meta charset="utf-8">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -8,13 +9,80 @@
   <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
   <meta name="amp-consent-blocking" content="amp-ad">
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description" content="Minnow News brings you the latest trending stories, viral headlines, and in-depth articles on everything from pop culture to tech. Stay ahead of the curve with our daily news updates.">
+  <meta name="description"
+    content="Minnow News brings you the latest trending stories, viral headlines, and in-depth articles on everything from pop culture to tech. Stay ahead of the curve with our daily news updates.">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/index.html">
   <link rel="preload" href="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" as="image" fetchpriority="high">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <title>Minnow News - Trending Stories and Viral Headlines</title>
-  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+  <style amp-boilerplate>
+    body {
+      -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+      -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+      -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+      animation: -amp-start 8s steps(1, end) 0s 1 normal both
+    }
+
+    @-webkit-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @-moz-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @-ms-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @-o-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+  </style><noscript>
+    <style amp-boilerplate>
+      body {
+        -webkit-animation: none;
+        -moz-animation: none;
+        -ms-animation: none;
+        animation: none
+      }
+    </style>
+  </noscript>
   <style amp-custom>
     :root {
       --background: #000000;
@@ -22,9 +90,10 @@
       --text-color: #333;
       --heading-color: #000;
       --accent-color: #0053B3;
-      --shadow: 0 2px 4px rgba(0,0,0,0.1);
+      --shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       --border-radius: 8px;
     }
+
     body {
       background-color: var(--background);
       color: var(--text-color);
@@ -33,6 +102,7 @@
       line-height: 1.5;
       margin: 0;
     }
+
     .header {
       background-color: var(--card-background);
       padding: 1rem 5%;
@@ -40,6 +110,7 @@
       text-align: center;
       box-shadow: var(--shadow);
     }
+
     .header h1 {
       font-size: 1.8rem;
       color: var(--heading-color);
@@ -47,19 +118,23 @@
       font-weight: 700;
       letter-spacing: -1px;
     }
+
     .header h1 span {
       color: var(--accent-color);
     }
+
     main {
       padding: 2rem 5%;
       max-width: 1100px;
       margin: 0 auto;
     }
+
     .articles-grid {
       display: grid;
       grid-template-columns: 1fr;
       gap: 1.5rem;
     }
+
     .article-card {
       display: flex;
       flex-direction: column;
@@ -72,43 +147,67 @@
       animation: popIn 0.4s ease-out forwards;
       opacity: 0;
     }
-    .article-card:nth-child(1) { animation-delay: 0.1s; }
-    .article-card:nth-child(2) { animation-delay: 0.2s; }
-    .article-card:nth-child(3) { animation-delay: 0.3s; }
-    .article-card:nth-child(4) { animation-delay: 0.4s; }
-    .article-card:nth-child(5) { animation-delay: 0.5s; }
+
+    .article-card:nth-child(1) {
+      animation-delay: 0.1s;
+    }
+
+    .article-card:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    .article-card:nth-child(3) {
+      animation-delay: 0.3s;
+    }
+
+    .article-card:nth-child(4) {
+      animation-delay: 0.4s;
+    }
+
+    .article-card:nth-child(5) {
+      animation-delay: 0.5s;
+    }
+
     .article-card:hover {
       transform: scale(1.03);
     }
+
     .card-image amp-img {
       border-radius: var(--border-radius) var(--border-radius) 0 0;
     }
+
     .card-content {
       padding: 1rem;
       display: flex;
       flex-direction: column;
       flex-grow: 1;
     }
+
     .card-content h3 {
       margin: 0 0 0.5rem 0;
       font-size: 1.15rem;
       color: var(--heading-color);
     }
+
     .card-content p {
       margin: 0;
       font-size: 0.9rem;
       flex-grow: 1;
       opacity: 0.9;
     }
+
     .featured {
       grid-column: 1 / -1;
     }
+
     .featured .card-content h3 {
-        font-size: 1.75rem;
+      font-size: 1.75rem;
     }
+
     .featured .card-content p {
-        font-size: 1rem;
+      font-size: 1rem;
     }
+
     @media (min-width: 768px) {
       .articles-grid {
         grid-template-columns: repeat(4, 1fr);
@@ -116,39 +215,61 @@
           "featured featured article2 article3"
           "featured featured article4 article5";
       }
-      .article-card:nth-child(1) { grid-area: featured; }
-      .article-card:nth-child(2) { grid-area: article2; }
-      .article-card:nth-child(3) { grid-area: article3; }
-      .article-card:nth-child(4) { grid-area: article4; }
-      .article-card:nth-child(5) { grid-area: article5; }
+
+      .article-card:nth-child(1) {
+        grid-area: featured;
+      }
+
+      .article-card:nth-child(2) {
+        grid-area: article2;
+      }
+
+      .article-card:nth-child(3) {
+        grid-area: article3;
+      }
+
+      .article-card:nth-child(4) {
+        grid-area: article4;
+      }
+
+      .article-card:nth-child(5) {
+        grid-area: article5;
+      }
+
       .featured {
         flex-direction: column;
       }
-      .featured .card-image {
-      }
+
+      .featured .card-image {}
+
       .featured .card-image amp-img {
-         border-radius: var(--border-radius) var(--border-radius) 0 0;
-         object-fit: cover;
+        border-radius: var(--border-radius) var(--border-radius) 0 0;
+        object-fit: cover;
       }
     }
+
     @media (min-width: 500px) and (max-width: 767px) {
-        .articles-grid {
-            grid-template-columns: 1fr 1fr;
-        }
-        .featured {
-            grid-column: 1 / -1;
-        }
+      .articles-grid {
+        grid-template-columns: 1fr 1fr;
+      }
+
+      .featured {
+        grid-column: 1 / -1;
+      }
     }
+
     @keyframes popIn {
       from {
         opacity: 0;
         transform: scale(0.9);
       }
+
       to {
         opacity: 1;
         transform: scale(1);
       }
     }
+
     .footer {
       text-align: center;
       padding: 2rem 5%;
@@ -157,22 +278,26 @@
       border-top: 1px solid #dddfe2;
       font-size: 0.9rem;
     }
+
     .footer a {
       color: var(--accent-color);
       text-decoration: none;
       margin: 0 0.5rem;
       border-bottom: 1px solid var(--accent-color);
     }
+
     .footer a:hover {
       text-decoration: none;
       color: #003366;
     }
+
     .footer p {
       margin-top: 0.5rem;
       opacity: 0.7;
     }
   </style>
 </head>
+
 <body>
   <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
     <script type="application/json">
@@ -215,26 +340,30 @@
     <div class="articles-grid">
       <a href="austin-music-sept-18-2025.html" class="article-card featured">
         <div class="card-image">
-          <amp-img src="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" width="895" height="895" layout="responsive"
-            alt="Austin Music Scene" data-hero fetchpriority="high"></amp-img>
+          <amp-img src="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" width="895" height="895"
+            layout="responsive" alt="Austin Music Scene" data-hero fetchpriority="high"></amp-img>
         </div>
         <div class="card-content">
           <h3>Austin's Got the Vibe Tonight: Your Guide to Live Music on Sept 18th!</h3>
-          <p>From the massive RippleFest to intimate club shows, find out what's happening in the Austin music scene tonight.</p>
+          <p>From the massive RippleFest to intimate club shows, find out what's happening in the Austin music scene
+            tonight.</p>
         </div>
       </a>
       <a href="coachella-2026.html" class="article-card">
         <div class="card-image">
-          <amp-img src="assets/Justin_Bieber_in_2015 (1).jpg" width="626" height="895" layout="responsive" alt="Coachella 2026"></amp-img>
+          <amp-img src="assets/Justin_Bieber_in_2015 (1).webp" width="626" height="895" layout="responsive"
+            alt="Coachella 2026"></amp-img>
         </div>
         <div class="card-content">
           <h3>Coachella 2026 Lineup Announced!</h3>
-          <p>The full lineup for the 2026 Coachella Valley Music and Arts Festival is here. Check out the headliners and more.</p>
+          <p>The full lineup for the 2026 Coachella Valley Music and Arts Festival is here. Check out the headliners and
+            more.</p>
         </div>
       </a>
       <a href="robert_redford.html" class="article-card">
         <div class="card-image">
-          <amp-img src="assets/Robert_Redford_1973-2.jpg" width="897" height="895" layout="responsive" alt="Robert Redford"></amp-img>
+          <amp-img src="assets/Robert_Redford_1973-2.webp" width="897" height="895" layout="responsive"
+            alt="Robert Redford"></amp-img>
         </div>
         <div class="card-content">
           <h3>Robert Redford: A Hollywood Legend</h3>
@@ -243,25 +372,29 @@
       </a>
       <a href="ben_and_jerrys.html" class="article-card">
         <div class="card-image">
-          <amp-img src="assets/Ben_&_Jerry's_Cookie_Dough_Ice_Cream_465_ml,_May_2025.jpg" width="1127" height="844" layout="responsive" alt="Ben & Jerry's"></amp-img>
+          <amp-img src="assets/Ben_&_Jerry's_Cookie_Dough_Ice_Cream_465_ml,_May_2025.webp" width="1127" height="844"
+            layout="responsive" alt="Ben & Jerry's"></amp-img>
         </div>
         <div class="card-content">
           <h3>Ben & Jerry's Co-Founder Quits</h3>
-          <p>Jerry Greenfield leaves the iconic ice cream company, citing conflict with parent company Unilever over its social mission.</p>
+          <p>Jerry Greenfield leaves the iconic ice cream company, citing conflict with parent company Unilever over its
+            social mission.</p>
         </div>
       </a>
       <a href="biochar.html" class="article-card">
         <div class="card-image">
-          <amp-img src="assets/biochar.jpeg" width="600" height="400" layout="responsive" alt="Biochar"></amp-img>
+          <amp-img src="assets/biochar.webp" width="600" height="400" layout="responsive" alt="Biochar"></amp-img>
         </div>
         <div class="card-content">
           <h3>Biochar: The Black Gold for Your Garden</h3>
-          <p>An in-depth look at how this ancient soil amendment can revolutionize modern farming and help fight climate change.</p>
+          <p>An in-depth look at how this ancient soil amendment can revolutionize modern farming and help fight climate
+            change.</p>
         </div>
       </a>
       <a href="zen-swing.html" class="article-card">
         <div class="card-image">
-          <amp-img src="https://raw.githubusercontent.com/bcebel/MNNWS/main/assets/zen2.png" width="891" height="895" layout="responsive" alt="Zen Swing"></amp-img>
+          <amp-img src="assets/zen2.webp" width="891" height="895"
+            layout="responsive" alt="Zen Swing"></amp-img>
         </div>
         <div class="card-content">
           <h3>The Art of the Zen Swing</h3>
@@ -270,7 +403,8 @@
       </a>
       <a href="gamestop.html" class="article-card">
         <div class="card-image">
-          <amp-img src="assets/gamestop_store.jpg" width="1127" height="751" layout="responsive" alt="Gamestop"></amp-img>
+          <amp-img src="assets/gamestop_store.webp" width="1127" height="751" layout="responsive"
+            alt="Gamestop"></amp-img>
         </div>
         <div class="card-content">
           <h3>GameStop Saga</h3>
@@ -279,7 +413,7 @@
       </a>
       <a href="banksy.html" class="article-card">
         <div class="card-image">
-          <amp-img src="assets/banksy.jpg" width="1047" height="895" layout="responsive" alt="Banksy"></amp-img>
+          <amp-img src="assets/banksy1.webp" width="1047" height="895" layout="responsive" alt="Banksy"></amp-img>
         </div>
         <div class="card-content">
           <h3>Who is Banksy?</h3>
@@ -288,7 +422,7 @@
       </a>
       <a href="fall.html" class="article-card">
         <div class="card-image">
-          <amp-img src="assets/fallveg.jpg" width="1127" height="805" layout="responsive" alt="Fall"></amp-img>
+          <amp-img src="assets/fallveg.webp" width="1127" height="805" layout="responsive" alt="Fall"></amp-img>
         </div>
         <div class="card-content">
           <h3>Autumn's Embrace</h3>
@@ -302,4 +436,5 @@
     <p>&copy; 2024 Minnow News. All Rights Reserved.</p>
   </footer>
 </body>
+
 </html>
