--- a/robert_redford.html
+++ b/robert_redford.html
@@ -11,7 +11,73 @@
   <script async custom-element="amp-story-auto-analytics"
     src="https://cdn.ampproject.org/v0/amp-story-auto-analytics-0.1.js"></script>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+  <style amp-boilerplate>
+    body {
+      -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+      -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+      -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+      animation: -amp-start 8s steps(1, end) 0s 1 normal both
+    }
+
+    @-webkit-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @-moz-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @-ms-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @-o-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+  </style><noscript>
+    <style amp-boilerplate>
+      body {
+        -webkit-animation: none;
+        -moz-animation: none;
+        -ms-animation: none;
+        animation: none
+      }
+    </style>
+  </noscript>
 
   <script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
   <script async custom-element="amp-story" src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
@@ -21,48 +87,53 @@
       font-family: 'Oswald', sans-serif;
       color: #fff;
     }
+
     amp-story-page {
       background-color: #000;
     }
+
     h1 {
       font-weight: bold;
       font-size: 2.875em;
       font-weight: normal;
       line-height: 1.174;
     }
+
     p {
       font-weight: normal;
       font-size: 1.3em;
       line-height: 1.5em;
       color: #fff;
     }
+
     amp-story-grid-layer.bottom {
       align-content: end;
     }
+
     amp-story-grid-layer.top {
-        align-content: start;
+      align-content: start;
     }
+
     .text-overlay {
-        background-color: rgba(0,0,0,0.7);
-        padding: 10px;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 10px;
     }
   </style>
 </head>
 
 <body>
 
-  <amp-story standalone
-    supports-landscape
-    title="Robert Redford: A Life in Film"
-    publisher="Minnow News Network"
-    publisher-logo-src="img/fish.png"
-    poster-portrait-src="https://upload.wikimedia.org/wikipedia/commons/d/dd/Robert_Redford_1973-2.jpg">
+  <amp-story standalone supports-landscape title="Robert Redford: A Life in Film" publisher="Minnow News Network"
+    publisher-logo-src="img/fish.webp"
+    poster-portrait-src="https://upload.wikimedia.org/wikipedia/commons/d/dd/Robert_Redford_1973-2.webp">
 
     <amp-story-auto-analytics gtag-id="G-V3TNNSX3H4"></amp-story-auto-analytics>
 
     <amp-story-page id="cover">
       <amp-story-grid-layer template="fill">
-        <amp-img src="https://heute-at-prod-images.imgix.net/2021/07/23/9832cb81-e8d1-4de8-bb60-e17f3faa7d42.jpeg?auto=format" layout="fill"></amp-img>
+        <amp-img
+          src="https://heute-at-prod-images.imgix.net/2021/07/23/9832cb81-e8d1-4de8-bb60-e17f3faa7d42.webp?auto=format"
+          layout="fill"></amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
         <h1>Robert Redford: A Hollywood Legend</h1>
@@ -71,84 +142,101 @@
 
     <amp-story-page id="page2">
       <amp-story-grid-layer template="fill">
-        <amp-img src="https://upload.wikimedia.org/wikipedia/commons/d/dd/Robert_Redford_1973-2.jpg" layout="fill"></amp-img>
+        <amp-img src="https://upload.wikimedia.org/wikipedia/commons/d/dd/Robert_Redford_1973-2.webp"
+          layout="fill"></amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="top">
-        <p class="text-overlay">Charles Robert Redford Jr. was born in Santa Monica, California. He grew up in a working-class family and attended the University of Colorado on a baseball scholarship.</p>
+        <p class="text-overlay">Charles Robert Redford Jr. was born in Santa Monica, California. He grew up in a
+          working-class family and attended the University of Colorado on a baseball scholarship.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
     <amp-story-page id="page3">
-        <amp-story-grid-layer template="fill">
-          <amp-img src="https://live.staticflickr.com/2860/8791340094_56eed0a107_b.jpg" layout="fill"></amp-img>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="top">
-          <p class="text-overlay">After a brief stint in Europe, Redford moved to New York to study acting. He began his career on the stage and in television, appearing in shows like "The Twilight Zone" and "Alfred Hitchcock Presents".</p>
-        </amp-story-grid-layer>
-      </amp-story-page>
+      <amp-story-grid-layer template="fill">
+        <amp-img src="https://live.staticflickr.com/2860/8791340094_56eed0a107_b.webp" layout="fill"></amp-img>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="top">
+        <p class="text-overlay">After a brief stint in Europe, Redford moved to New York to study acting. He began his
+          career on the stage and in television, appearing in shows like "The Twilight Zone" and "Alfred Hitchcock
+          Presents".</p>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="page4">
-        <amp-story-grid-layer template="fill">
-          <amp-img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Robert_Redford_advocating_against_the_demolition_of_Santa_Monica_Pier_while_filming_The_Sting_on_the_pier._G._1973.jpg" layout="fill"></amp-img>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="top">
-          <p class="text-overlay">Redford's breakout role came in 1969 with "Butch Cassidy and the Sundance Kid," co-starring Paul Newman. The film made him a major Hollywood star.</p>
-        </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="page4">
+      <amp-story-grid-layer template="fill">
+        <amp-img
+          src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Robert_Redford_advocating_against_the_demolition_of_Santa_Monica_Pier_while_filming_The_Sting_on_the_pier._G._1973.webp"
+          layout="fill"></amp-img>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="top">
+        <p class="text-overlay">Redford's breakout role came in 1969 with "Butch Cassidy and the Sundance Kid,"
+          co-starring Paul Newman. The film made him a major Hollywood star.</p>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="page5">
-        <amp-story-grid-layer template="fill">
-          <amp-img src="https://live.staticflickr.com/5269/5685659907_aef30bdf41_b.jpg" layout="fill"></amp-img>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="top">
-          <p class="text-overlay">In 1984, Redford starred in "The Natural," a film that has become a classic. He played Roy Hobbs, a baseball player with a mysterious past and a powerful bat named "Wonderboy."</p>
-        </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="page5">
+      <amp-story-grid-layer template="fill">
+        <amp-img src="https://live.staticflickr.com/5269/5685659907_aef30bdf41_b.webp" layout="fill"></amp-img>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="top">
+        <p class="text-overlay">In 1984, Redford starred in "The Natural," a film that has become a classic. He played
+          Roy Hobbs, a baseball player with a mysterious past and a powerful bat named "Wonderboy."</p>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="page6">
-        <amp-story-grid-layer template="fill">
-          <amp-img src="https://live.staticflickr.com/8148/7562943804_de0087288e_b.jpg" layout="fill"></amp-img>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="top">
-          <p class="text-overlay">The story of Roy Hobbs is one of redemption and second chances. After a tragic event cuts short his promising career, he returns to the game as a middle-aged rookie and leads his team to glory.</p>
-        </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="page6">
+      <amp-story-grid-layer template="fill">
+        <amp-img src="https://live.staticflickr.com/8148/7562943804_de0087288e_b.webp" layout="fill"></amp-img>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="top">
+        <p class="text-overlay">The story of Roy Hobbs is one of redemption and second chances. After a tragic event
+          cuts short his promising career, he returns to the game as a middle-aged rookie and leads his team to glory.
+        </p>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="page7">
-        <amp-story-grid-layer template="fill">
-          <amp-img src="https://live.staticflickr.com/35/123824100_e8893fd40e_z.jpg" layout="fill"></amp-img>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="top">
-          <p class="text-overlay">Redford was also a talented director. He won an Academy Award for Best Director for his 1980 film "Ordinary People."</p>
-        </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="page7">
+      <amp-story-grid-layer template="fill">
+        <amp-img src="https://live.staticflickr.com/35/123824100_e8893fd40e_z.webp" layout="fill"></amp-img>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="top">
+        <p class="text-overlay">Redford was also a talented director. He won an Academy Award for Best Director for his
+          1980 film "Ordinary People."</p>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="page8">
-        <amp-story-grid-layer template="fill">
-          <amp-img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Robert_Redford_Cannes.jpg" layout="fill"></amp-img>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="top">
-          <p class="text-overlay">In 1981, Redford founded the Sundance Institute, a non-profit organization dedicated to supporting independent filmmakers. The annual Sundance Film Festival is one of the most prestigious in the world.</p>
-        </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="page8">
+      <amp-story-grid-layer template="fill">
+        <amp-img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Robert_Redford_Cannes.webp"
+          layout="fill"></amp-img>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="top">
+        <p class="text-overlay">In 1981, Redford founded the Sundance Institute, a non-profit organization dedicated to
+          supporting independent filmmakers. The annual Sundance Film Festival is one of the most prestigious in the
+          world.</p>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="page9">
-        <amp-story-grid-layer template="fill">
-          <amp-img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSezGASsnpBkeUqRUTW_Bkgwt7YEJGVln2mmw&s" layout="fill"></amp-img>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="top">
-          <p class="text-overlay">Beyond film, Redford was a passionate environmentalist and political activist, supporting causes such as climate change awareness and Native American rights.</p>
-        </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="page9">
+      <amp-story-grid-layer template="fill">
+        <amp-img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSezGASsnpBkeUqRUTW_Bkgwt7YEJGVln2mmw&s"
+          layout="fill"></amp-img>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="top">
+        <p class="text-overlay">Beyond film, Redford was a passionate environmentalist and political activist,
+          supporting causes such as climate change awareness and Native American rights.</p>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="page10">
-        <amp-story-grid-layer template="fill">
-          <amp-img src="https://live.staticflickr.com/3708/9552180397_d3843835bd_z.jpg" layout="fill"></amp-img>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="top">
-          <p class="text-overlay">Robert Redford's legacy as an actor, director, and champion of independent film will continue to inspire generations to come.</p>
-        </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="page10">
+      <amp-story-grid-layer template="fill">
+        <amp-img src="https://live.staticflickr.com/3708/9552180397_d3843835bd_z.webp" layout="fill"></amp-img>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="top">
+        <p class="text-overlay">Robert Redford's legacy as an actor, director, and champion of independent film will
+          continue to inspire generations to come.</p>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
     <amp-story-bookend src="bookend.json" layout="nodisplay"></amp-story-bookend>
   </amp-story>
