--- a/zen-swing.html
+++ b/zen-swing.html
@@ -142,11 +142,11 @@
 <body>
   <!-- Cover page -->
   <amp-story standalone supports-landscape title="The Zen Swing" publisher="Minnow News Network"
-    publisher-logo-src="img/fish.png" poster-portrait-src="assets/zen.png">
+    publisher-logo-src="img/fish.webp" poster-portrait-src="assets/zen.webp">
     <amp-story-auto-analytics gtag-id="G-V3TNNSX3H4"></amp-story-auto-analytics>
     <amp-story-page id="cover">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/zen2.png" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/zen2.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
@@ -158,7 +158,7 @@
     <!-- Page 1 -->
     <amp-story-page id="page1">
       <amp-story-grid-layer template="fill">
-        <amp-video autoplay loop width="720" height="1280" poster="assets/cover.png" layout="responsive">
+        <amp-video autoplay loop width="720" height="1280" poster="assets/cover.webp" layout="responsive">
           <source src="assets/5645057-hd_1920_1080_25fps.mp4" type="video/mp4">
         </amp-video>
       </amp-story-grid-layer>
@@ -172,7 +172,7 @@
     <!-- Page 2 -->
     <amp-story-page id="page2">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/mill.jpg" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/mill.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
@@ -185,7 +185,7 @@
     <!-- Page 3 -->
     <amp-story-page id="page3">
       <amp-story-grid-layer template="fill">
-        <amp-video autoplay loop width="720" height="1280" poster="assets/orchard.jpg" layout="responsive">
+        <amp-video autoplay loop width="720" height="1280" poster="assets/orchard.webp" layout="responsive">
           <source src="assets/appletree.mp4" type="video/mp4">
         </amp-video>
       </amp-story-grid-layer>
