--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     <div class="articles-grid">
       <a href="haam-day-2025.html" class="article-card featured">
         <div class="card-image">
-          <amp-img src="assets/austin.webp" width="895" height="497"
+          <amp-img src="assets/Piemaster-Gibson-Flying-V.webp" width="497" height="497"
             layout="responsive" alt="HAAM Day 2025" data-hero></amp-img>
         </div>
         <div class="card-content">
