--- a/zen-swing-article.html
+++ b/zen-swing-article.html
@@ -213,7 +213,7 @@
 
         <p>In our fast-paced world, finding moments of calm and clarity can feel like a monumental task. Yet, one of the most effective techniques for achieving a state of relaxed focus comes from the ancient Chinese practice of Qigong. It’s called the "Zen Swing," and its beauty lies in its profound simplicity.</p>
 
-        <amp-img src="assets/zen2.webp" alt="A serene image representing zen and balance" class="article-image" width="1024" height="683" layout="responsive"></amp-img>
+        <amp-img src="assets/zen2.webp" alt="A serene image representing zen and balance" class="article-image" width="885" height="888" layout="responsive"></amp-img>
 
         <h3>What is the Zen Swing?</h3>
         <p>The Zen Swing, also known as "Shaking the Tree" or simply "Spinal Cord Breathing," is a foundational Qigong exercise. It’s a form of moving meditation that involves a gentle, rhythmic twisting of the torso, allowing the arms to swing freely. The goal is to release tension, stimulate the body's internal energy (Qi), and calm the mind through repetitive, fluid motion.</p>
@@ -230,7 +230,7 @@
             </ol>
         </div>
         <amp-tiktok width="325" height="575"
-          data-src="ZTMeonerM"
+          data-src="ZTMd1xatw"
           layout="responsive">
         </amp-tiktok>
 
