--- a/zen-swing-article.html
+++ b/zen-swing-article.html
@@ -230,7 +230,7 @@
             </ol>
         </div>
         <amp-tiktok width="325" height="575"
-          data-src="ZTMd1xatw"
+          data-src="ZTMd1apJQ"
           layout="responsive">
         </amp-tiktok>
 
