--- a/zen-swing-article.html
+++ b/zen-swing-article.html
@@ -229,10 +229,9 @@
                 <li><strong>Breathe and Flow:</strong> Coordinate your breath with the movement. Inhale as you twist to one side, and exhale as you twist to the other. Find a comfortable rhythm and continue for 3-5 minutes. Allow your mind to focus solely on the sensation of the movement and your breath.</li>
             </ol>
         </div>
-        <amp-tiktok width="325" height="575"
-          data-src="ZTMd1apJQ"
-          layout="responsive">
-        </amp-tiktok>
+       <div class="tiktok-container">
+          <amp-tiktok width="325" height="575" data-src="https://www.tiktok.com/@calebcomplains/video/7529168975045971214"></amp-tiktok>
+        </div>
 
         <h3>The Surprising Health Benefits</h3>
         <p>While it may look simple, the Zen Swing has a wide range of benefits for both physical and mental well-being:</p>
