--- a/zen-swing-article.html
+++ b/zen-swing-article.html
@@ -160,6 +160,12 @@
     .instructions li {
         margin-bottom: 1rem;
     }
+        .tiktok-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 2rem 0;
+    }
   </style>
 </head>
 
