--- a/austin_articles/11_planet_k.html
+++ b/austin_articles/11_planet_k.html
@@ -82,7 +82,83 @@
       }
     </style>
   </noscript>
-
+  <style amp-custom>
+        body {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      line-height: 1.6;
+      color: #333;
+      background-color: #f0f2f5;
+      margin: 0;
+    }
+    .header {
+      background-color: #ffffff;
+      padding: 1rem 5%;
+      border-bottom: 1px solid #dddfe2;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .header h1 {
+      font-size: 1.8rem;
+      color: #000;
+      margin: 0;
+      font-weight: 700;
+      letter-spacing: -1px;
+    }
+    .header h1 span {
+      color: #1877f2;
+    }
+    .nav a {
+      margin: 0 10px;
+      color: #1877f2;
+      text-decoration: none;
+      font-size: 1rem;
+      font-weight: 500;
+    }
+    .nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      padding: 2rem 5%;
+      max-width: 800px;
+      margin: 20px auto;
+      background-color: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    article h2 {
+      color: #000;
+      border-bottom: 2px solid #dddfe2;
+      padding-bottom: 10px;
+    }
+    article p {
+      font-size: 1.1rem;
+      margin-bottom: 1.5rem;
+    }
+    article h3 {
+        color: #333;
+    }
+    a {
+      color: #1877f2;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .article-image {
+        width: 100%;
+        height: auto;
+        border-radius: 8px;
+        margin-bottom: 1rem;
+    }
+    .tiktok-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 2rem 0;
+    }
+      </style>
 <body>
   <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
     <script type="application/json">
@@ -141,6 +217,9 @@
 <li>Vaporizers and e-cigarette supplies.</li>
 <li>A wide range of rolling papers, grinders, and other accessories.</li>
 </ul>
+              <div class="tiktok-container">
+          <amp-tiktok width="325" height="575" data-src="https://www.tiktok.com/@calebcomplains/video/7430038678518435115"></amp-tiktok>
+        </div>
 <p>Due to its long history and wide selection, Planet K has been voted "Austin's Best Smoke Shop" on multiple occasions, solidifying its status as a leader in this retail category.</p>
 <h2>More Than Just a Smoke Shop</h2>
 <p>What truly makes Planet K an Austin institution is everything else it sells. A trip to Planet K is an adventure in novelty, humor, and counter-culture. The stores are packed with an eclectic and often "naughty" mix of items. You can find:</p>
