--- a/austin_articles/11_planet_k.html
+++ b/austin_articles/11_planet_k.html
@@ -7,6 +7,7 @@
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+    <script async custom-element="amp-tiktok" src="https://cdn.ampproject.org/v0/amp-tiktok-0.1.js"></script>
   <meta name="amp-consent-blocking" content="amp-ad">
   <meta name="amp-google-client-id-api" content="googleanalytics" />
   <meta name="description"
